--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,8 @@ html {
   border-radius: 2px;
   backdrop-filter: blur(1px);
   font-size: 0.7em;
-  margin-left: 3em;
-  width: 2.3vw;
+  font-weight: 400;
+  margin-top: 1em;
+  width: fit-content;
   cursor: pointer;
 }
