update label text color

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,8 @@ html {
 }
 
 .label {
-  background-color: #062a2d5a;
-  color: #d5eade;
+  background-color: #05252895;
+  color: #ffffff;
   border-radius: 2px;
   backdrop-filter: blur(1px);
   font-size: 0.7em;
